<resources>
    <string name="app_name">RCT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_version">1.0</string>
    <string name="version_unknown">1.0</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hide">Hide</string>
    <string name="variety">Variety</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="write_a_message">Write a message…</string>
    <string name="home">Home</string>
    <string name="chats">chats</string>
    <string name="notifications">notifications</string>
    <string name="account">Account</string>
    <string name="prices">prices</string>
    <string name="chat">Chat</string>
    <string name="sellers">Sellers</string>
    <string name="give_tender">Give Tender</string>
    <string name="request_tender">Request Tender</string>
    <string name="request">Request</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="selling_price">Selling Price</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
    <string name="people_name">People Name</string>
    <string name="you_dont_have_an_account_please_login">You dont have an account please login</string>
    <string name="login">Login</string>
    <string name="kevin_john">Kevin John</string>
    <string name="todo">TODO</string>
    <string name="buyer">Buyer</string>
    <string name="phone">Phone</string>
    <string name="statistic">Statistic</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="_1_give_tender">1. Give Tender</string>
    <string name="a_formal_structured_procedure_for_generating_competing_offers_from_different_potential_suppliers_or_contractors_looking_to_obtain_an_award_of_business_activity_in_works_supply">A formal, structured procedure for generating competing offers from different potential suppliers or contractors looking to obtain an award of business activity in works, supply.</string>
    <string name="_2_request_tender">2. Request Tender</string>
    <string name="_3_price_rate">3. Indicative Price</string>
    <string name="recent_tender_request">Recent Tender Request</string>
    <string name="shop_by_sellers">Shop by Sellers</string>
    <string name="buyers">Buyers</string>
    <string name="shop_by_cluster">Shop by Cluster</string>
    <string name="no_notification_or_quotes">No Notification or Quotes</string>
    <string name="buyername">buyerName</string>
    <string name="seller_name">Seller Name</string>
    <string name="grade">Grade</string>
    <string name="send_qoute_to_buyer">Send Qoute to buyer</string>
    <string name="platform_name">Platform Name:</string>
    <string name="seller_location">Seller Location:</string>
    <string name="category">Category:</string>
    <string name="size_of_business">Size of Business:</string>
    <string name="shop_from_this_seller">Shop from this seller</string>
    <string name="request_details">Request Details</string>
    <string name="date_sent">Date sent</string>
    <string name="write_your_quote">Write your Quote</string>
    <string name="quantity_you_can_supply">Quantity you can supply</string>
    <string name="supply_details">Supply Details</string>
    <string name="cancel">Cancel</string>
    <string name="send_quote">Send Quote</string>
    <string name="seller">seller</string>
    <string name="add_batch_certification">add batch certification</string>
    <string name="requests">Requests</string>
    <string name="quotes">Quotes</string>
    <string name="add_quantity">Add quantity</string>
    <string name="add_price">Add Price</string>
    <string name="quote_sent">Quote sent</string>
    <string name="try_again">Try again</string>
    <string name="you_must_login_to_continue">You must login to continue</string>
    <string name="fail_to_load_data">Fail to load data</string>
    <string name="fill_all_inputs">Fill all inputs</string>
    <string name="success">Success</string>
    <string name="please_add_quantity">Please add quantity</string>
    <string name="failed_to_get_sms">Failed to get sms</string>
    <string name="no_active_conversation">No active conversation</string>
    <string name="indicative_price">Indicative Price</string>
    <string name="price_s">Price: %s</string>
    <string name="price_sc">Price: </string>
    <string name="view_all">View All</string>
    <string name="give_all_tender">Give Tender</string>
    <string name="fail_to_load_da">Fail to load data</string>
    <string name="loading">Loading ...</string>
    <string name="pick_image">Pick Image</string>
    <string name="upload_now">upload now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_variety">Select Variety</string>
    <string name="is_it_graded">Is it graded?</string>
    <string name="is_batch_certified">Is batch certified?</string>
    <string name="ind_price">Click the "Indicative Prices" tab on the navigation menu to view Indicative prices </string>
    <string name="recent_tender_sub">Zabuni zilizo ombwa</string>
    <string name="shop_by_seller_sub">Nunua kwa muuzaji</string>
    <string name="buyer_sub">Wanunuaji</string>
    <string name="shop_by_cluster_sub">Nunua Kwa Jukwaa</string>
    <string name="num_buyers">%d Buyers</string>
    <string name="requesttednderdetails">Procedure for sellers to offer quantity and price for their rice to buyers. </string>
    <string name="givetenderdetails">Procedure for buyers to give tender for rice and its products to rice suppliers. </string>
</resources>