<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rct.pages.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_prices"
        android:name="com.rct.pages.PricesFragment"
        android:label="Prices"
        tools:layout="@layout/fragment_prices" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.rct.pages.ChatAllFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chat_all" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rct.pages.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.rct.pages.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account" />
</navigation>